WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171026
[GTK] ../../Source/ThirdParty/xdgmime/src/xdgmimecache.c:200:62: warning: pointer of type ‘void *’ used in arithmetic [-Wpointer-arith]
https://bugs.webkit.org/show_bug.cgi?id=171026
Summary
[GTK] ../../Source/ThirdParty/xdgmime/src/xdgmimecache.c:200:62: warning: poi...
Michael Catanzaro
Reported
2017-04-19 18:24:22 PDT
[43/5806] Building C object Source/Thi...Files/xdgmime.dir/src/xdgmimecache.c.o ../../Source/ThirdParty/xdgmime/src/xdgmimecache.c: In function ‘cache_magic_matchlet_compare_to_data’: ../../Source/ThirdParty/xdgmime/src/xdgmimecache.c:200:62: warning: pointer of type ‘void *’ used in arithmetic [-Wpointer-arith] valid_matchlet = memcmp(cache->buffer + data_offset, data + i, data_length) == 0;
Attachments
Patch
(1.94 KB, patch)
2017-04-19 18:30 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-04-19 18:30:34 PDT
Created
attachment 307537
[details]
Patch
WebKit Commit Bot
Comment 2
2017-04-19 23:27:02 PDT
Comment on
attachment 307537
[details]
Patch Clearing flags on attachment: 307537 Committed
r215553
: <
http://trac.webkit.org/changeset/215553
>
WebKit Commit Bot
Comment 3
2017-04-19 23:27:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug