[GTK] ../../Source/ThirdParty/xdgmime/src/xdgmimecache.c:200:62: warning: pointer of type ‘void *’ used in arithmetic [-Wpointer-arith] https://bugs.webkit.org/show_bug.cgi?id=171026

Reviewed by Carlos Garcia Campos.

* xdgmime/README.webkit:
* xdgmime/src/xdgmimecache.c:
(cache_magic_matchlet_compare_to_data):


Canonical link: https://commits.webkit.org/187958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215553 268f45cc-cd09-0410-ab3c-d52691b4dbfc